--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "TwitchIRC"]
 	path = extern/TwitchIRC
-	url = https://github.com/darknight1050/TwitchIRC.git
+	url = https://github.com/zoller27osu/TwitchIRC
